@@ -31,7 +31,6 @@ import javax.persistence.ManyToMany;
 import javax.persistence.ManyToOne;
 import javax.validation.constraints.PositiveOrZero;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Contexts importance (for the time being) is based on the insertion order. The context algorithm will search for all
@@ -59,6 +58,6 @@ public class Context extends EcmConfig {
     private int importance; // higher = more important
 
     public void setEcmConfigs(List<EcmConfig> ecmConfigs) {
-        this.ecmConfigs = ecmConfigs.stream().filter(config -> !(config instanceof Context)).collect(Collectors.toList());
+        this.ecmConfigs = ecmConfigs.stream().filter(config -> !(config instanceof Context)).toList();
     }
 }
